--- a/seleniumwebdriver/pom.xml
+++ b/seleniumwebdriver/pom.xml
@@ -27,6 +27,12 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.23.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>7.10.2</version>
+			<scope>test</scope>
+		</dependency>
 
 
 	</dependencies>
